adapter updated on image uppdate

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JoeGlass_CE06"
-        android:largeHeap="true">
+        android:largeHeap="true"
+
+        >
 
         <service
             android:name=".ImageDownloaderService"
             android:enabled="true"
             android:exported="false"/>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
