--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.joeglass.ce06">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -15,7 +16,7 @@
         android:theme="@style/Theme.JoeGlass_CE06"
         android:largeHeap="true"
 
-        >
+        tools:ignore="AllowBackup">
 
         <service
             android:name=".ImageDownloaderService"
