--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:largeHeap="true"
         tools:ignore="AllowBackup">
 
-        <activity android:name=".MainActivity"
+        <activity android:name=".activities.MainActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
@@ -37,8 +37,7 @@
                 android:resource="@xml/provider_paths"/>
         </provider>
 
-        <service android:name=".ImageDownloaderService"
-            android:exported="false"/>
+
     </application>
 
 </manifest>
